log
Sat, Mar 22, 2025  5:44:30 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Sat, Mar 22, 2025  6:18:40 PM: 
 exercises.c | 22 +++++++++++++++++-----
 1 file changed, 17 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
exercises.c:70:1: error: "/*" within comment [-Werror=comment]
 /*
  
exercises.c:83:1: error: "/*" within comment [-Werror=comment]
 /*
  
exercises.c:93:1: error: "/*" within comment [-Werror=comment]
 /*
  
exercises.c:100:1: error: unterminated comment
 /*int parentesisBalanceados(char *cadena) {
 ^
test.c: In function 'test_suma_lista':
test.c:100:17: error: implicit declaration of function 'sumaLista' [-Werror=implicit-function-declaration]
     int suma2 = sumaLista(L);
                 ^~~~~~~~~
test.c: In function 'test_elimina_elemento':
test.c:132:5: error: implicit declaration of function 'eliminaElementos' [-Werror=implicit-function-declaration]
     eliminaElementos(L, elem);
     ^~~~~~~~~~~~~~~~
test.c: In function 'test_copia_pila':
test.c:175:5: error: implicit declaration of function 'copia_pila' [-Werror=implicit-function-declaration]
     copia_pila(P1, P2);
     ^~~~~~~~~~
test.c: In function 'test_parentesis_balanceados':
test.c:217:9: error: implicit declaration of function 'parentesisBalanceados' [-Werror=implicit-function-declaration]
     if(!parentesisBalanceados(s)){
         ^~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
55b928c
Sat, Mar 22, 2025  6:34:31 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c:70:1: error: "/*" within comment [-Werror=comment]
 /*
  
exercises.c:83:1: error: "/*" within comment [-Werror=comment]
 /*
  
exercises.c:93:1: error: "/*" within comment [-Werror=comment]
 /*
  
test.c: In function 'test_suma_lista':
test.c:100:17: error: implicit declaration of function 'sumaLista' [-Werror=implicit-function-declaration]
     int suma2 = sumaLista(L);
                 ^~~~~~~~~
test.c: In function 'test_elimina_elemento':
test.c:132:5: error: implicit declaration of function 'eliminaElementos' [-Werror=implicit-function-declaration]
     eliminaElementos(L, elem);
     ^~~~~~~~~~~~~~~~
test.c: In function 'test_copia_pila':
test.c:175:5: error: implicit declaration of function 'copia_pila' [-Werror=implicit-function-declaration]
     copia_pila(P1, P2);
     ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8212821
Sat, Mar 22, 2025  6:34:38 PM: 
In file included from test.c:5:0:
exercises.c:70:1: error: "/*" within comment [-Werror=comment]
 /*
  
exercises.c:83:1: error: "/*" within comment [-Werror=comment]
 /*
  
exercises.c:93:1: error: "/*" within comment [-Werror=comment]
 /*
  
test.c: In function 'test_suma_lista':
test.c:100:17: error: implicit declaration of function 'sumaLista' [-Werror=implicit-function-declaration]
     int suma2 = sumaLista(L);
                 ^~~~~~~~~
test.c: In function 'test_elimina_elemento':
test.c:132:5: error: implicit declaration of function 'eliminaElementos' [-Werror=implicit-function-declaration]
     eliminaElementos(L, elem);
     ^~~~~~~~~~~~~~~~
test.c: In function 'test_copia_pila':
test.c:175:5: error: implicit declaration of function 'copia_pila' [-Werror=implicit-function-declaration]
     copia_pila(P1, P2);
     ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4e08bc1
Sat, Mar 22, 2025  6:36:08 PM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:63:25: error: implicit declaration of function 'fisrt' [-Werror=implicit-function-declaration]
    for(void *elemento = fisrt(L); elemento != NULL; elemento = next(L))
                         ^~~~~
exercises.c:63:25: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
exercises.c:63:4: error: declaration of non-variable 'fisrt' in 'for' loop initial declaration
    for(void *elemento = fisrt(L); elemento != NULL; elemento = next(L))
    ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
829e05b
Sat, Mar 22, 2025  6:36:30 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
349b73c
Sat, Mar 22, 2025  6:43:28 PM: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
9f63da6
Sat, Mar 22, 2025  6:48:05 PM: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  4|1
total_score: 50/70
1166138
Sat, Mar 22, 2025  9:01:53 PM: 
 exercises.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
 tests:  4|0
   [info] Cadena: ((()))
526833e
Sat, Mar 22, 2025  9:02:56 PM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|0
   [info] Cadena: ((()))
f073335
Sun, Mar 23, 2025  3:52:49 PM: 
 exercises.c | 24 +++++++++++++++++++++---
 1 file changed, 21 insertions(+), 3 deletions(-)
 tests:  9|0
total_score: 70/70
7053f32
